--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body style="background-color: rgb(238, 194, 201);">
   <!--Navbar start-->
   <nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" data-bs-theme="dark">
-    <div class="container-fluid">
+    <div class="container">
       <a class="navbar-brand text-dark" href="#"><img src="images/icon.ico" alt="Logo"><b>Portfolio</b></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
 
   <!--Bannerimage Start-->
   <section class="bannerBGImage" id="home">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-md-12 bannerText">
           <h2 class="bannerTitle animate__pulse animate__animated animate__infinite	infinite"> Hello There!!!</h2>
