--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <!--(class="card-img img-fluid) is extra code used to fit the image size-->
         </div>
         <div class="col-md-8" data-aos="fade-left" data-aos-duration="2000">
-          <p class="h3">Hi There! Glad to meet you here. Below details are the breaf about me </p>
+          <p class="h3">Hi There! Glad to meet you here. Below details are the brief about me </p>
           <div class="row">
             <div class="col-md-10 p-4">
               <ul>
